--- a/javascript/javascript_first_steps/comparison_operators_example/index.html
+++ b/javascript/javascript_first_steps/comparison_operators_example/index.html
@@ -1,4 +1,4 @@
 <button>Start machine</button>
 <p>The machine is stopped.</p>
 
-<script src="script.js"></script>
+<script src="main.js"></script>
