--- a/javascript/javascript_first_steps/number_guessing_game/index.html
+++ b/javascript/javascript_first_steps/number_guessing_game/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Number guessing game</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="script.js" defer></script>
+    <script src="main.js" defer></script>
 
   </head>
   <body>
